# pyproject.toml 작성시 poetry 방식(Poetry backend)
[tool.poetry]
name = "ysoftman-lemon"
version = "0.1.0"
description = "test package"
authors = ["ysoftman <ysoftman@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"

[tool.poetry.urls]
repository = "https://github.com/ysoftman/ysoftman-lemon"
homepage = "https://github.com/ysoftman/ysoftman-lemon"

[tool.poetry.scripts]
# ysoftman-lemon 으로 실행하기 위해서
my_package_cli = 'ysoftman-lemon=lemon.main:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
